DEFAULT_INCLUDES = -I$(top_builddir)/lib -I$(top_srcdir)/lib

noinst_LTLIBRARIES = libcommonrender.la

RegularSources = \
	CvrTextureObject.cpp CvrTextureObject.h \
	CvrRGBATexture.cpp CvrRGBATexture.h \
	CvrPaletteTexture.cpp CvrPaletteTexture.h \
	Cvr2DPaletteTexture.cpp Cvr2DPaletteTexture.h \
	Cvr3DPaletteTexture.cpp Cvr3DPaletteTexture.h \
	Cvr3DPaletteGradientTexture.cpp Cvr3DPaletteGradientTexture.h \
	Cvr2DRGBATexture.cpp Cvr2DRGBATexture.h \
	Cvr3DRGBATexture.cpp Cvr3DRGBATexture.h

libcommonrender_la_SOURCES = $(RegularSources)
